--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-static/
+staticfiles/
 .idea/
-qlapse/__pycache__/
-/__pycache__/
-accounts/__pycache__/
-payments/__pycache__/
-stripe_payments/__pycache__/
-banners/__pycache__/
-banners/migrations/__pycache__/
+*/*/*/__pycache__/
+*/*/__pycache__/
+*/__pycache__/
+__pycache__/
+media/
