--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,6 @@ vcrpy==4.1.1
 pdf2image==1.14.0
 boto3==1.16.14
 django-storages==1.10.1
-faker-4.14.2
-factory-boy-3.1.0
+faker==4.14.2
+factory-boy==3.1.0
+django-positions==0.6.0
